--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
