--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@twa-dev/sdk": "^7.0.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.2",
+    "flowbite-react": "^0.10.1",
     "pixi.js": "^8.1.6",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
