--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
