--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@pixi/react": "^7.1.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tonconnect/sdk": "^3.0.5",
+    "@tonconnect/ui-react": "^2.0.9",
     "@twa-dev/sdk": "^7.0.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.2",
@@ -31,7 +33,8 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "tonweb": "^0.0.66"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
