--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pixi.js": "^8.1.6",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
@@ -31,6 +32,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.1",
+    "react-slideshow-image": "^4.3.1",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
