--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tonconnect/sdk": "^3.0.5",
     "@tonconnect/ui-react": "^2.0.9",
     "@twa-dev/sdk": "^7.0.0",
+    "@vercel/speed-insights": "^1.0.12",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.2",
     "flowbite-react": "^0.10.1",
