--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.2",
     "flowbite-react": "^0.10.1",
+    "lucide-react": "^0.446.0",
     "pixi.js": "^8.1.6",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
